--- a/processing/dip_nifti_dilation.ipynb
+++ b/processing/dip_nifti_dilation.ipynb
@@ -210,8 +210,8 @@
         "  mskimg2d[:,:,nz] = mp.binary_dilation(mskimg2[:,:,nz],selem=mp.disk(Nd))\n",
         "\n",
         "# for 3d erosion/dilation (for 3D MR images, not recommended for 2D data with thick slice)\n",
-        "# mskimg2e=mp.binary_erosion(mskimg2,selem=mp.disk(Ne))\n",
-        "# mskimg2d=mp.binary_dilation(mskimg2,selem=mp.disk(Nd))\n",
+        "# mskimg2e=mp.binary_erosion(mskimg2,selem=mp.ball(Ne))\n",
+        "# mskimg2d=mp.binary_dilation(mskimg2,selem=mp.ball(Nd))\n",
         "plt.imshow(np.concatenate((mskimg2[:,:,n_slice],(mskimg2d[:,:,n_slice].astype(int)-mskimg2e[:,:,n_slice].astype(int))>0.5),axis=1))"
       ],
       "execution_count": 5,
