--- a/pyradiomics/examples/extract_features_from_multiple_nifti.ipynb
+++ b/pyradiomics/examples/extract_features_from_multiple_nifti.ipynb
@@ -2,9 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Processing /Users/yangseanchoi/Library/Caches/pip/wheels/af/67/e0/4befebbb028e5cb8dc49d6a8c5eceda8605e2c3b1400680fd0/radiomics-0.1-py3-none-any.whl\n",
+      "Requirement already satisfied: scikit-image in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from radiomics) (0.16.2)\n",
+      "Requirement already satisfied: PyWavelets in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from radiomics) (1.1.1)\n",
+      "Requirement already satisfied: scipy in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from radiomics) (1.5.0)\n",
+      "Requirement already satisfied: numpy in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from radiomics) (1.18.5)\n",
+      "Requirement already satisfied: networkx>=2.0 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from scikit-image->radiomics) (2.4)\n",
+      "Requirement already satisfied: imageio>=2.3.0 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from scikit-image->radiomics) (2.9.0)\n",
+      "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from scikit-image->radiomics) (3.2.2)\n",
+      "Requirement already satisfied: pillow>=4.3.0 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from scikit-image->radiomics) (7.2.0)\n",
+      "Requirement already satisfied: decorator>=4.3.0 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from networkx>=2.0->scikit-image->radiomics) (4.4.2)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->radiomics) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->radiomics) (2.8.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->radiomics) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->radiomics) (1.2.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib!=3.0.0,>=2.0.0->scikit-image->radiomics) (1.15.0)\n",
+      "Installing collected packages: radiomics\n",
+      "Successfully installed radiomics-0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install radiomics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'featureextractor' from 'radiomics' (/Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages/radiomics/__init__.py)",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-b5ba062cbd33>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Import some libraries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSimpleITK\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msitk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mradiomics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfeatureextractor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'featureextractor' from 'radiomics' (/Users/yangseanchoi/opt/anaconda3/lib/python3.8/site-packages/radiomics/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# Download the zip file if it does not exist\n",
     "import os, zipfile\n",
@@ -13,7 +58,7 @@
     "from six.moves import urllib\n",
     "# Import some libraries\n",
     "import SimpleITK as sitk\n",
-    "from radiomics import featureextractor"
+    "from radiomics import featureextractor #version?"
    ]
   },
   {
@@ -293,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
