--- a/processing/edema_dist_multi.ipynb
+++ b/processing/edema_dist_multi.ipynb
@@ -285,7 +285,7 @@
     "        print(pids[i])\n",
     "        pid = pids[i]\n",
     "\n",
-    "        path = \"/Users/yoonhonam/Desktop/glioma_segmentation_results/\"+pid\n",
+    "        path = path0+pid\n",
     "        segname = \"net_input_\"+pid+\".nii.gz\"    # filename of input mask\n",
     "\n",
     "        t2 = nib.load(path+'/'+imgname)\n",
